--- a/reactSupabaseAuthCrud/src/components/Routes/cuentaStyles.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/cuentaStyles.css
@@ -1,3 +1,7 @@
+.container {
+    min-height: 100vh;
+}
+
 .main-content {
     display: flex;
     flex-direction: column;
@@ -128,8 +132,6 @@
     text-decoration: none;
     font-size: 1.2rem;
     display: flex;
-
-
 }
 
 
