--- a/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
@@ -1,13 +1,22 @@
 .compost-request-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
+
     min-height: 100vh;
     width: 100%;
     padding: 120px;
+}
 
-    h1 {
-        color: white;
-        text-align: center;
-    }
+.row.pt-4 {
+    align-items: center;
+}
+
+.how-to {
+    flex: 1;
+    text-align: end;
+    justify-content: space-between;
+    gap: 20px;
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: white;
+    padding: 2rem 5rem 5rem 3rem;
 }
