--- a/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
@@ -11,7 +11,10 @@
     align-items: center;
     flex-direction: column;
     padding: 1rem 1rem 1rem 1rem;
+    min-width: 550px;  
+
 }
+
 
 .how-to {
     display: flex;
