login y compost request mas wapos

--- a/reactSupabaseAuthCrud/src/components/Routes/compostarStyles.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/compostarStyles.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 20px;
-    font-size: 1.8rem;
+    /* font-size: 1.8rem; */
     font-weight: 600;
     color: white;
     padding: 2rem 5rem 5rem 3rem;
@@ -15,7 +15,7 @@
     text-align: end;
     justify-content: space-between;
     gap: 20px;
-    font-size: 1.8rem;
+    /* font-size: 1.8rem; */
     font-weight: 600;
     color: white;
     padding: 2rem 5rem 5rem 3rem;
@@ -49,7 +49,7 @@
     text-align: start;
     justify-content: space-between;
     gap: 20px;
-    font-size: 1.8rem;
+    /* font-size: 1.8rem; */
     font-weight: 600;
     color: white;
     padding: 2rem 5rem 5rem 3rem;
@@ -61,4 +61,5 @@
 
 .container {
     min-height: 100vh;
+    font-size: 1.3rem;
 }
