--- a/reactSupabaseAuthCrud/src/App.css
+++ b/reactSupabaseAuthCrud/src/App.css
@@ -36,20 +36,12 @@ span {
 }
 
 /* botones, forms e inputs */
-label {
-  display: block;
-  margin: 10px;
-  color: #6BA2A9;
-}
+
 
 input,
 select {
-  width: 100%;
-  height: 100%;
-  background: #072E33;
-  border: none;
-  outline: none;
-  border: 3px solid rgba(255, 255, 255, .2);
+
+  background: #072E3390;
   border-radius: 40px;
   font-size: 16px;
   color: #ffff;
