--- a/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
@@ -7,11 +7,19 @@
 }
 
 .row.pt-4 {
+    color: white;
+    font-size: 1.3rem;
+    gap: 40px;
     display: flex;
-    align-items: center;
+
     flex-direction: column;
-    padding: 1rem 1rem 1rem 1rem;
-    min-width: 550px;  
+    padding: 1.5rem;
+    min-width: 550px;
+
+    h1 {
+        text-align: start;
+        width: 400px;
+    }
 
 }
 
@@ -23,10 +31,10 @@
     text-align: end;
     justify-content: space-between;
     gap: 20px;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     font-weight: 600;
     color: white;
-    padding: 3rem;
+    padding: 1.5rem;
     border-left: 3px solid #a7564470;
 
     i {
