--- a/reactSupabaseAuthCrud/src/components/TaskForm.module.css
+++ b/reactSupabaseAuthCrud/src/components/TaskForm.module.css
@@ -1,23 +1,24 @@
 .card {
-    background-color: #f9f9f9;
+    background-color: #25685D;
     padding: 50px 5px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: min-height 0.3s ease; 
-    min-width: 550px;  
+    transition: min-height 0.3s ease;
+    min-width: 450px;
 
 }
+
 .form-control {
     margin-bottom: 15px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 60%;
-    
+
 }
 
 .btn {
-    background-color: #007bff;
+    background-color: #072E33;
     border: none;
     color: white;
     padding: 10px 20px;
@@ -32,7 +33,8 @@
 }
 
 .btn:hover {
-    background-color: #0056b3;
+    background-color: #6BA2A9;
+    color: #072E33;
 }
 
 .btn:disabled {
@@ -50,5 +52,5 @@
 .price {
     font-size: 16px;
     margin-bottom: 15px;
-    color: #333;
+    color: white;
 }
