--- a/reactSupabaseAuthCrud/src/pages/LoginStyles.css
+++ b/reactSupabaseAuthCrud/src/pages/LoginStyles.css
@@ -1,25 +1,58 @@
 .wrapper {
-  padding-top: 200px;
-  min-height: 100vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  padding: 2rem;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 1);
+  backdrop-filter: blur(6.7px);
+  -webkit-backdrop-filter: blur(6.7px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .terms-container {
-  max-width: 50%;
-  padding: 10px;
+
+  display: flex;
+  margin-top: 20px;
+  max-width: 70%;
+  padding: 2rem;
   text-align: center;
   margin: auto;
+  gap: 30px;
+
+}
+
+.terms-Link {
+  flex: 1;
+  align-self: center;
+
+  p1 {
+    color: white;
+  }
+
+  a {
+    color: rgb(191, 191, 191);
+  }
+
+  a:hover {
+    color: white;
+  }
 }
 
 .button-submit {
   width: 30%;
+  text-decoration: none;
   padding: 10px 20px;
   font-size: 16px;
 }
 
 input[type="password"],
 input[type="email"] {
-  width: 30%;
-  padding: 10px;
+  width: 60%;
+  padding: 0.8rem;
   margin-top: 5px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
@@ -27,12 +60,11 @@ input[type="email"] {
 }
 
 h3 {
-  color: #ccc;
+  font-size: 1.5rem;
+  color: #ffffff;
+  padding: 0 0 2rem 0;
 }
 
-.terms-container {
-  margin-top: 20px;
-}
 
 .terms-details {
   margin-top: 10px;
