--- a/reactSupabaseAuthCrud/src/pages/TermsAndConditions.css
+++ b/reactSupabaseAuthCrud/src/pages/TermsAndConditions.css
@@ -1,10 +1,3 @@
-
-.NavbarItems {
-
-  width: 80%;
-
-}
-
 .terms-conditions {
   padding: 20px;
   max-width: 50%;
@@ -16,7 +9,8 @@
   border-radius: 8px;
   text-align: justify;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-/}
+  /
+}
 
 
 .terms-conditions h1 {
@@ -32,7 +26,8 @@
   margin-top: 20px;
 }
 
-.terms-conditions p, .terms-conditions ul {
+.terms-conditions p,
+.terms-conditions ul {
   margin-bottom: 20px;
 }
 
@@ -53,6 +48,7 @@
 .terms-conditions a:hover {
   text-decoration: underline;
 }
+
 .button-container {
   display: flex;
   justify-content: space-between;
@@ -61,7 +57,7 @@
 
 .accept-button,
 .reject-button {
-    width: 40%;
+  width: 40%;
   padding: 10px 20px;
   font-size: 16px;
   border: none;
