--- a/reactSupabaseAuthCrud/src/components/Routes/cuentaStyles.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/cuentaStyles.css
@@ -1,7 +1,3 @@
-.profile-container {
-    min-height: 100vh;
-}
-
 .main-content {
     display: flex;
     flex-direction: column;
@@ -26,8 +22,10 @@
     display: flex;
     flex-direction: column;
     margin-top: 200px;
-    max-width: 1200px;
+    max-width: 100%;
     width: 100%;
+    min-height: 100vh;
+    padding: 2rem;
 
 }
 
@@ -142,26 +140,23 @@
 
 /* tabs de settings de usuario */
 
-.user-profile-settings {
-    display: flex;
-}
+.user-profile-settings {}
 
 .user-profile-settings ul {
     display: none;
 }
 
 .user-profile-settings {
-    ul.active {
+    display: flex;
+
+    .user-profile-settings-tabs.active {
+        border-right: 1px solid #a7564470;
         display: flex;
         flex-direction: column;
         margin: -15px 60px -15px -15px;
     }
-
-    .user-profile-settings-tabs.active {
-        border-right: 1px solid #a7564470;
-    }
-
 }
+
 
 
 .user-profile-settings .user-profile-settings-tabs li {
@@ -358,6 +353,22 @@
     /* Establecer la posición relativa para los elementos absolutos dentro de él */
 }
 
+.collect-record-tabs.active {
+    flex: 1;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.compost-request-history {
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 1.5rem 1rem 1rem 2rem;
+    margin-top: 100px;
+    min-width: 90%;
+}
 
 .custom-table {
     width: 100%;
@@ -399,4 +410,75 @@
     margin: 0;
     text-align: center;
     /* Centrar el título */
+}
+
+/*contenido historial de recolectas*/
+.history-container {
+    color: white;
+    min-width: 100%;
+    font-size: 1.3rem;
+    gap: 40px;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem 1rem 1rem;
+}
+
+.history-container-title {
+    display: flex;
+
+    .h5 {
+        font-size: 4rem;
+        flex: 1;
+        text-align: start;
+    }
+
+    .history-container-title-bttn {
+        max-width: 300px;
+        align-self: center;
+        background: #ffffff;
+        color: #a75644;
+    }
+
+    .history-container-title-bttn:hover {
+        background: #a75644;
+        color: white;
+    }
+}
+
+.history-container-list {
+
+
+    div {
+        div {
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            padding: 1rem;
+
+            .history-card {
+                display: flex;
+                flex-direction: row;
+                background: #0C707860;
+                border-radius: 16px;
+                gap: 30px;
+
+                .h5 {
+                    align-self: center;
+                    text-align: start;
+                    padding: 1rem;
+                    width: 70%;
+                }
+
+                p {
+                    align-self: center;
+                    width: 10%;
+                }
+
+                .ms-auto {
+                    width: 20%;
+                    gap: 10px;
+                }
+            }
+        }
+    }
 }
