preguntas frecuentes hechas

--- a/reactSupabaseAuthCrud/src/components/Routes/cuentaStyles.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/cuentaStyles.css
@@ -140,8 +140,6 @@
 
 /* tabs de settings de usuario */
 
-.user-profile-settings {}
-
 .user-profile-settings ul {
     display: none;
 }
@@ -153,7 +151,8 @@
         border-right: 1px solid #a7564470;
         display: flex;
         flex-direction: column;
-        margin: -15px 60px -15px -15px;
+
+
     }
 }
 
@@ -163,6 +162,7 @@
     margin: 15px;
     position: relative;
 
+
 }
 
 .user-profile-settings .user-profile-settings-tabs li a {
@@ -170,7 +170,7 @@
     display: flex;
     overflow: hidden;
     font-weight: 700;
-    padding: 0 15px 20px;
+    padding: 1rem 1rem 4rem 1rem;
     white-space: nowrap;
     color: #6BA2A9;
     text-decoration: none;
@@ -195,21 +195,16 @@
 }
 
 .user-profile-settings .user-profile-settings-tabs li a .lines {
-    display: flex;
-    flex-direction: column;
+    padding: 1rem;
     margin-right: 20px;
     width: 100%;
 }
 
-.user-profile-settings .user-profile-settings-tabs li a .fa-solid {
-    margin-right: 20px;
-
-}
 
 
 .user-profile-settings .user-profile-settings-tabs li a .lines .title {
     color: #6BA2A9;
-    font-size: 17px;
+    font-size: 25px;
     font-weight: 700;
     margin-bottom: 3px;
     overflow: hidden;
@@ -229,124 +224,117 @@
 
 /* contenido de settings content */
 
-.user-profile-settings .settings-content {
-    margin: -15px;
-}
 
 .avatar {
     background-size: 100%;
     display: flex;
 }
 
+.settings-content {
+    display: flex;
+    padding: 1rem;
+}
+
 .user-profile-settings .settings-content .tab-content-settings {
 
-    .profile-info.active {
+    /*Registro y cuenta de usuario*/
+
+    .register-FAQ.active {
         display: flex;
         flex-direction: column;
+
+        .tab-content-point {
+            padding: 2rem;
+            color: white;
+            text-align: start;
+            font-size: 1.6rem;
+            line-height: 2;
+        }
+
+        .tab-content-question {
+            padding: 0rem 0rem 1rem 2rem;
+            line-height: 1.2;
+        }
     }
 
-    .profile-info {
+    .register-FAQ {
         display: none;
     }
 
-    .nickavatar {
-        display: flex;
-        margin: 15px;
-        margin-bottom: 0 !important;
+    /*Servicios de recolección*/
 
-        .avatar-picture {
-            display: flex;
-            flex-direction: column;
-            margin-right: 30px;
-            width: 300px;
-
-            .ig-profile-avatar-edit {
-                align-items: center;
-                color: var(--color-light);
-                cursor: pointer;
-                display: flex;
-                color: #0C7078;
-
-                .avatar img {
-                    width: 58px;
-                }
-
-                .fa-solid {
-                    margin-left: 20px;
-                    margin-right: 10px;
-                }
-            }
-
-            .ig-profile-avatar-editor {
-                display: none;
-            }
-        }
-
-        .nick {
-            width: 95%;
-
-            .nickname-editor {
-                align-items: center;
-                display: flex;
-
-                .ig-profile-edit-input {
-                    appearance: none;
-                    background-color: #0C707840;
-                    border: 0;
-                    border-radius: 7px;
-                    box-shadow: inset 0 0 0 2px #6BA2A940;
-                    color: #fff;
-                    font-family: barlow, arial, sans-serif;
-                    font-size: 17px;
-                    height: 58px;
-                    outline: none;
-                    padding: 15px 20px;
-                    transition: .2s;
-                    width: 100%;
-                }
-
-
-                .nickname-submit {
-                    margin-left: 15px;
-                    align-items: center;
-                    appearance: none;
-                    background: white;
-                    border: 0;
-                    border-radius: 7px;
-                    box-sizing: border-box;
-                    color: #a75644;
-                    cursor: pointer;
-                    display: inline-flex;
-                    font-size: 17px;
-                    font-weight: 700;
-                    height: 56px;
-                    justify-content: center;
-                    padding: 0 25px;
-                    text-align: center;
-                    transition: background-color .2s;
-                    white-space: normal;
-                    width: auto;
-                }
-
-                .nickname-submit:hover {
-                    background: #a75644;
-                    color: white;
-                }
-            }
-        }
-    }
-
-    .settings-subtitle {
-        font-size: 19px;
-        color: white;
+    .collect-service-FAQ.active {
         display: flex;
         flex-direction: column;
-        font-weight: 700;
-        margin-bottom: 20px;
-        text-align: left;
+
+        .tab-content-point {
+            padding: 2rem;
+            color: white;
+            text-align: start;
+            font-size: 1.6rem;
+            line-height: 2;
+        }
+
+        .tab-content-question {
+            padding: 0rem 0rem 1rem 2rem;
+            line-height: 1.2;
+        }
     }
 
+    .collect-service-FAQ {
+        display: none;
+    }
+
+    /*Información sobre la composta*/
+
+    .info-FAQ.active {
+        display: flex;
+        flex-direction: column;
+
+        .tab-content-point {
+            padding: 2rem;
+            color: white;
+            text-align: start;
+            font-size: 1.6rem;
+            line-height: 2;
+        }
+
+        .tab-content-question {
+            padding: 0rem 0rem 1rem 2rem;
+            line-height: 1.2;
+        }
+    }
+
+    .info-FAQ {
+        display: none;
+    }
+
+    /*Pagos y Facturación*/
+    .payment-FAQ.active {
+        display: flex;
+        flex-direction: column;
+
+        .tab-content-point {
+            padding: 2rem;
+            color: white;
+            text-align: start;
+            font-size: 1.6rem;
+            line-height: 2;
+        }
+
+        .tab-content-question {
+            padding: 0rem 0rem 1rem 2rem;
+            line-height: 1.2;
+        }
+    }
+
+    .payment-FAQ {
+        display: none;
+    }
 }
+
+
+
 
 .user-profile-settings {
     position: relative;
