--- a/reactSupabaseAuthCrud/src/pages/footerStyles.css
+++ b/reactSupabaseAuthCrud/src/pages/footerStyles.css
@@ -1,8 +1,10 @@
 .footer {
+    position: absolute;
     padding: 1rem 6rem;
     background: black;
     color: white;
     font-size: 0.8rem;
+    width: 100%;
 }
 
 .top {
