--- a/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
@@ -24,14 +24,14 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    text-align: end;
+    text-align: start;
     justify-content: space-between;
     gap: 20px;
     font-size: 1.3rem;
     font-weight: 600;
     color: white;
     padding: 1.5rem;
-    border-left: 3px solid #a7564470;
+    border-right: 3px solid #a7564470;
 
     i {
         padding: 0 20px 0 20px;
