--- a/reactSupabaseAuthCrud/src/components/Routes/compostarStyles.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/compostarStyles.css
@@ -4,10 +4,16 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 20px;
-    /* font-size: 1.8rem; */
     font-weight: 600;
     color: white;
-    padding: 2rem 5rem 5rem 3rem;
+    padding: 2rem 5rem 3rem 5rem;
+}
+
+.who-text {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
 
 .what-compost {
@@ -15,15 +21,29 @@
     text-align: end;
     justify-content: space-between;
     gap: 20px;
-    /* font-size: 1.8rem; */
     font-weight: 600;
     color: white;
     padding: 2rem 5rem 5rem 3rem;
+
+    .image-content {
+        display: block;
+        width: 20%;
+        margin-right: 100px;
+        object-fit: cover;
+        opacity: 0.8;
+        mask-image: linear-gradient(to right, #05161A 50%, transparent 100%);
+    }
+
+    .res-image {
+        display: none;
+    }
 }
 
 .content {
     display: flex;
     flex-direction: column;
+    flex: 1;
+
 
     p1 {
         margin-top: 20px;
@@ -32,15 +52,6 @@
     }
 }
 
-.image-content {
-    align-items: center;
-    display: block;
-    width: 20%;
-    margin-left: 100px;
-    object-fit: cover;
-    opacity: 0.8;
-    mask-image: linear-gradient(to right, #05161A 50%, transparent 100%);
-}
 
 
 
@@ -49,17 +60,126 @@
     text-align: start;
     justify-content: space-between;
     gap: 20px;
-    /* font-size: 1.8rem; */
     font-weight: 600;
     color: white;
     padding: 2rem 5rem 5rem 3rem;
 
     .image-content {
-        mask-image: linear-gradient(to left, #05161A 50%, transparent 100%);
+        display: block;
+        width: 20%;
+        margin-left: 100px;
+        object-fit: cover;
+        opacity: 0.8;
+        mask-image: linear-gradient(to right, #05161A 50%, transparent 100%);
+    }
+
+    .res-image {
+        display: none;
     }
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
     font-size: 1.3rem;
+}
+
+@media screen and (max-width: 1000px) {
+
+    .who-compost {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 20px;
+        font-weight: 600;
+        color: white;
+        padding: 2rem 3rem 3rem 3rem;
+    }
+
+    .what-compost {
+        display: flex;
+        text-align: start;
+        justify-content: space-between;
+        gap: 20px;
+        font-weight: 600;
+        color: white;
+        padding: 2rem 6rem 5rem 2rem;
+        overflow: hidden;
+        position: relative;
+
+        .image-content {
+            display: none;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            margin-right: 10px;
+
+            p1 {
+                margin-top: 20px;
+                margin-left: 0px;
+                margin-right: 40px;
+                line-height: 1.5;
+            }
+        }
+
+
+        .res-image {
+            display: flex;
+            position: absolute;
+            left: 80%;
+            width: auto;
+            transform: translateY(-10%);
+            z-index: -1;
+
+        }
+
+    }
+
+
+
+
+
+    .why-compost {
+        display: flex;
+        text-align: end;
+        justify-content: space-between;
+        gap: 20px;
+        font-weight: 600;
+        color: white;
+        padding: 2rem 2rem 5rem 4rem;
+        overflow: hidden;
+        position: relative;
+
+        .image-content {
+            display: none;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            margin-left: 10px;
+
+
+            p1 {
+                margin-top: 20px;
+                margin-right: 0px;
+                margin-left: 25px;
+                line-height: 1.5;
+            }
+        }
+
+        .res-image {
+            display: flex;
+            position: absolute;
+            right: 80%;
+            transform: translateY(-10%);
+            width: auto;
+            z-index: -1;
+
+        }
+    }
 }
