--- a/reactSupabaseAuthCrud/src/pages/NavbarStyles.css
+++ b/reactSupabaseAuthCrud/src/pages/NavbarStyles.css
@@ -96,6 +96,7 @@ button:hover {
         height: 20px;
         z-index: 100;
         width: 85%;
+        padding: 40px 40px 40px 10px;
     }
 
     .nav-menu {
