--- a/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/CompostRequestStyle.css
@@ -2,7 +2,7 @@
     display: flex;
     min-height: 100vh;
     width: 100%;
-    padding: 1.5rem 1rem 1rem 2rem;
+    padding: 1.5rem 1rem 1rem 1rem;
     margin-top: 100px;
 }
 
@@ -11,11 +11,12 @@
     font-size: 1.3rem;
     gap: 40px;
     display: flex;
-
     flex-direction: column;
     padding: 1rem 1rem 1rem 1rem;
     min-width: 550px;
     max-width: 551px;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
@@ -46,7 +47,6 @@
 .how-to-content {
     display: flex;
     text-align: start;
-    justify-content: center;
     align-items: center;
 
     .image-content {
@@ -98,4 +98,58 @@ th {
 
 td {
     font-size: 1.2rem;
+}
+
+@media screen and (max-width: 1300px) {
+    .compost-request-container {
+        flex-direction: column-reverse;
+        padding: 1.5rem 0rem;
+    }
+
+    .how-to {
+        border-right: none;
+        padding: 0rem;
+
+        h1 {
+            margin-left: 1.5rem;
+        }
+    }
+
+
+    .how-to-content {
+        overflow: hidden;
+        position: relative;
+
+        .how-to-text {
+            width: 80%;
+        }
+
+
+        .image-content {
+            max-width: 100%;
+            max-height: 100%;
+            display: block;
+            width: auto;
+            position: absolute;
+            left: 80%;
+            transform: translateX(-20%);
+            z-index: -1;
+        }
+    }
+
+
+
+    .tables {
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+
+
+    }
+
+    .table-content {
+        display: block;
+        width: 100%;
+
+    }
 }
