--- a/reactSupabaseAuthCrud/src/components/Routes/cuentaStyles.css
+++ b/reactSupabaseAuthCrud/src/components/Routes/cuentaStyles.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
-    margin-left: 30px;
-    margin-right: 30px;
+    padding: 0;
     min-height: 100vh;
+
 
 }
 
@@ -151,8 +151,6 @@
         border-right: 1px solid #a7564470;
         display: flex;
         flex-direction: column;
-
-
     }
 }
 
@@ -233,6 +231,10 @@
 .settings-content {
     display: flex;
     padding: 1rem;
+}
+
+.faq {
+    display: flex;
 }
 
 .user-profile-settings .settings-content .tab-content-settings {
@@ -333,6 +335,35 @@
     }
 }
 
+@media screen and (max-width: 1300px) {
+    .faq {
+        flex-direction: column;
+    }
+
+    .user-profile-settings .user-profile-settings-tabs.active {
+        border-right: none;
+        display: flex;
+
+        li {
+            margin: 0;
+
+            a {
+                padding: 0.2rem;
+                text-align: center;
+
+                .lines {
+                    margin-right: 0;
+                    padding: 0.5rem;
+                }
+
+                .fa-solid.fa-chevron-right {
+                    display: none;
+                }
+
+            }
+        }
+    }
+}
 
 
 
@@ -346,7 +377,6 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-
 }
 
 .compost-request-history {
@@ -418,9 +448,11 @@
         font-size: 4rem;
         flex: 1;
         text-align: start;
+        padding: 1rem;
     }
 
     .history-container-title-bttn {
+        display: block;
         max-width: 300px;
         align-self: center;
         background: #ffffff;
@@ -465,6 +497,11 @@
                 .ms-auto {
                     width: 20%;
                     gap: 10px;
+
+                    button {
+                        display: block;
+                        height: 45%;
+                    }
                 }
             }
         }
